[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subzero"
version = "1.0.0"
description = "Subdomain Takeover Scanner — multi-layer, false-positive resistant"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "dnspython>=2.6",
    "httpx>=0.27",
    "PyYAML>=6.0",
]

[project.scripts]
subzero = "subzero.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["subzero*"]
